Fix: remove horizontal scrollbar on the dataset view

--- a/web/src/main/style/edu/dfci/cccb/mev/web/style/mev.css
+++ b/web/src/main/style/edu/dfci/cccb/mev/web/style/mev.css
@@ -63,7 +63,10 @@ p.lead {
 .heatmap-container {
 	margin-top:40px;
 }
-
+#dataset-view-container{
+	margin-left: 15px; 
+	margin-right: 15px;
+}
 #leftPanel {
 	width: 30%;
 	float: left;
